--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,8 @@ html {
   --color-slate-grey: #4b4b4b;
   --color-green: #16c65f;
   --color-lightish-grey: #cccccc;
+  --color-tealish: #2de7ce;
+  --color-bluish: #0e242c;
 }
 
 body {
@@ -43,7 +45,7 @@ header {
 nav a {
   margin: 0 1rem;
   text-decoration: none;
-  color: var(--color-slate-grey);
+  color: var(--color-tealish);
   font-size: 3rem;
 }
 
@@ -59,7 +61,7 @@ h1 {
   align-items: center;
 }
 
-input[type="text"] {
+.name-input {
   padding: 1.4rem 2rem;
   width: 300px;
   font-size: 1.6rem;
@@ -81,7 +83,7 @@ button {
 .result {
   margin-top: 3rem;
   font-size: 1.8rem;
-  color: var(--color-grey);
+  color: var(--color-bluish);
 }
 
 .result span {
